welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: value lenght is not a member of Array[java.awt.Color]
  for (compt<- 0 to T.lenght-1) {
                      ^